--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "langchain-mcp-adapters>=0.1.9",
     "langchain-ollama>=0.3.7",
     "langgraph>=0.6.6",
+    "nest-asyncio>=1.6.0",
     "prompt-toolkit>=3.0.52",
 ]
