--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,6 @@ dependencies = [
     "langgraph>=0.6.6",
     "nest-asyncio>=1.6.0",
     "prompt-toolkit>=3.0.52",
+    "textual>=5.3.0",
+    "textual-dev>=1.7.0",
 ]
